# GDT

./: .gitignore  README.md  example.py  pyproject.toml
edt/: classifier.py  f2_funcs.py  selection.py
edt/data/: load.py  utils.py
edt/data/mushroom/: train.csv
gdt/: classifier.py  fitness.py
gdt/data/: __init__.py  load.py  utils.py
tests/: test_edt.py
