[tool.poetry]
name = "edt"
version = "0.1.0"
description = "Evolutionary Decision Tree Classifier"
authors = ["Bryan Deng <bryan.deng002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
pygraphviz = "^1.9"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
